# ultrafastnet

./: README.md  aggregator.py  benchmark.py  ci-workflow.yml  expert.py  psinetwork.py  pyproject.toml  router.py  standardnet.py  trainer.py
.github/workflows/: ci.yml
POC/: .gitignore  demo.py  fast_aggregator.py  ultra_fast_network.py  ultra_fast_router.py  vectorized_expert.py
Real_World/: .gitignore  README.md  packet_switching_model.py  pyproject.toml
Real_World/.github/workflows/: ci.yml  publish.yml
Real_World/examples/: __init__.py  basic_usage.py  benchmarking.py
Real_World/tests/: __init__.py  test_network.py  test_perfect_proof.py
Real_World/ultrafastnet/: __init__.py
Real_World/ultrafastnet/core/: __init__.py  aggregator.py  expert.py  network.py  router.py
Real_World/ultrafastnet/utils/: __init__.py  exceptions.py  logging_config.py  validators.py
tests/: spheretest.py  testing.py  tmp_model.pth  wisemen_tests.py
ultrafastnet/utils/: logging_config.py
