[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultrafastnet"
version = "0.1.0"
description = "Ultra-fast packet-switching neural network library"
authors = [
  { name="Your Name", email="your@email.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["ultrafastnet"]

[project.optional-dependencies]
dev = ["pytest"]
